<resources>
    <string name="app_name">Nippy Pay</string>
    <string name="log_in_text">login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_text">Register</string>
    <string name="malawi_extension">+265</string>
    <string name="phone_number_text">phone number</string>
    <string name="verify_phone_number_text">verify phone number</string>
    <string name="password_text">password</string>
    <string name="verify_password_text">verify password</string>
    <string name="verify_text">Verify</string>
    <string name="sgd_ltd">SGD LTD 2021</string>
    <string name="send_verification_text">Send Verification</string>
    <string name="phone_verification_title">Phone Verification</string>
    <string name="phone_verification_message">Phone verification sent successfully.</string>
    <string name="okay_text">Okay</string>
    <string name="unknown_error_message">Unknown Error occurred.</string>
    <string name="history_text">History</string>
    <string name="new_payment_text">New Payment</string>
    <string name="settings_text">Settings</string>
    <string name="sign_in_error">Error signing in.</string>
    <string name="verification_code_text">verification code</string>
    <string name="sign_out_text">sign out</string>
    <string name="signed_out_text">Signed Out</string>
    <string name="sign_out_success">Successfully signed out.</string>
    <string name="send_to_text">send to number</string>
    <string name="tnm_mpamba">TNM Mpamba</string>
    <string name="airtel_money">Airtel Money</string>
    <string name="pin_text">PIN</string>
    <string name="send_amount_mwk">Send amount MWK</string>
    <string name="make_payment_text">Make Payment</string>
    <string name="payment_assurance">Making payment of Mwk %d to %s via %s</string>
</resources>
