<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColorBg"
    android:clickable="true"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/pay_cardview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_24dp"
        app:cardBackgroundColor="@color/appColorBg"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/store_number"
                style="@style/PhoneEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:gravity="center"
                android:hint="@string/send_to_text"
                android:imeOptions="actionNext"
                android:padding="@dimen/dimen_16dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_edittext"
                style="@style/AppEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:gravity="center"
                android:hint="@string/send_amount_mwk"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="@dimen/dimen_16dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/store_number" />

            <RadioGroup
                android:id="@+id/payment_option_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amount_edittext">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/tnm_option_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:text="@string/tnm_mpamba" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/airtel_option_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:text="@string/airtel_money" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pincode_edittext"
                style="@style/AppEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:gravity="center"
                android:hint="@string/pin_text"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:padding="@dimen/dimen_16dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_option_group" />

            <TextView
                android:id="@+id/assure_textview"
                style="@style/AppInfoText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/dimen_16dp"
                android:gravity="center"
                android:text="@string/payment_assurance"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/payment_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pincode_edittext" />

            <Button
                android:id="@+id/payment_button"
                style="@style/AppActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/make_payment_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>